<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Daihugou</string>
    <string name="cpu1">CPU1</string>
    <string name="cpu2">CPU2</string>
    <string name="cpu3">CPU3</string>
    <string name="num">13</string>
    <string name="you">You</string>
    <string name="select">Select</string>
    <string name="pass">Pass</string>
    <string name="revolution">　　　　</string>
</resources>