<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameCPU1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpu1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/nameCPU2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpu2"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/nameCPU3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpu3"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/numCPU1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/numCPU2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/numCPU3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num"
                android:textAlignment="center" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:id="@+id/cardTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/revolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revolution"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/myCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <Button
            android:id="@+id/btnChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <Button
            android:id="@+id/btnpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:id="@+id/nameUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>